vyre-macros/tests/ui/bad_define_op_unknown_argument.stderr
error: unknown define_op! argument `mystery`. Fix: use id, dialect, category, inputs, outputs, laws, or program.
  --> tests/ui/bad_define_op_unknown_argument.rs:11:5
   |
11 |     mystery = true,
   |     ^^^^^^^
